testing with Jest

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <input id="lastName">
     <button>Save</button>
 </form>
-<script src="index.js"></script>
+<!--<script src="employee.js"></script>-->
+<script src="index.js" type="module"></script>
 </body>
 </html>
